--- a/code/MoodSync/app/src/main/res/layout/add_mood_fragment2.xml
+++ b/code/MoodSync/app/src/main/res/layout/add_mood_fragment2.xml
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/cancel"
         android:layout_marginTop="70dp"
-        android:text="What was the trigger for this mood?"
+        android:text="What was the reason for this mood?"
         android:textStyle="bold"
         android:textAppearance="@style/cancel"
         android:textSize="22sp"
@@ -67,7 +67,7 @@
         android:background="@drawable/edit_text_background"
         android:elevation="4dp"
         android:gravity="top|start"
-        android:hint="Enter trigger"
+        android:hint="Enter reason"
         android:padding="16dp"
         android:textColor="@color/secondary_text_color"
         android:textColorHint="@color/hint_text_color"
