--- a/code/MoodSync/app/src/main/res/layout/register.xml
+++ b/code/MoodSync/app/src/main/res/layout/register.xml
@@ -134,6 +134,7 @@
                 app:cornerRadius="12dp" />
 
             <TextView
+                android:id="@+id/go_to_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
