--- a/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
@@ -27,7 +27,7 @@
             android:paddingVertical="12dp">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/profile_image"
+                android:id="@+id/profile_image_edit"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_person_black_24dp"
@@ -39,15 +39,15 @@
                 android:layout_width="12dp"
                 android:layout_height="12dp"
                 android:background="@drawable/circle_shape"
-                android:layout_alignRight="@id/profile_image"
-                android:layout_alignBottom="@id/profile_image"
+                android:layout_alignRight="@id/profile_image_edit"
+                android:layout_alignBottom="@id/profile_image_edit"
                 android:backgroundTint="#4CAF50" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_toEndOf="@id/profile_image"
+                android:layout_toEndOf="@id/profile_image_edit"
                 android:layout_toStartOf="@id/details_button"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="12dp">
