--- a/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
+++ b/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
@@ -43,6 +43,10 @@
         <action
             android:id="@+id/action_SecondFragment_to_editMoodActivityFragment"
             app:destination="@id/editMoodActivityFragment" />
+        <action
+            android:id="@+id/action_SecondFragment_to_userProfileFragment"
+            app:destination="@id/userProfileFragment" />
+
     </fragment>
 
 <!--    <fragment-->
@@ -125,5 +129,15 @@
             android:id="@+id/action_editMoodActivityFragment2_to_moodHistoryFragment"
             app:destination="@id/moodHistoryFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/userProfileFragment"
+        android:name="com.example.moodsync.EditProfileFragment"
+        android:label="User Profile"
+        tools:layout="@layout/edit_profile_fragment">
+        <action
+            android:id="@+id/action_userProfileFragment_to_SecondFragment"
+            app:destination="@id/SecondFragment" />
+    </fragment>
+
 
 </navigation>
