--- a/code/MoodSync/app/src/main/res/layout/edit_profile_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/edit_profile_fragment.xml
@@ -176,6 +176,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/followers_count"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="1.2K"
@@ -199,6 +200,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/following_count"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="850"
@@ -222,6 +224,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/likes_count"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="10.5K"
