--- a/code/MoodSync/app/src/main/res/layout/user_profile_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/user_profile_fragment.xml
@@ -175,6 +175,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/followers_count"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="1.2K"
@@ -198,6 +199,7 @@
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/following_count"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="850"
