--- a/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
+++ b/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
@@ -66,7 +66,9 @@
         <action
             android:id="@+id/action_SecondFragment_to_userProfileFragment"
             app:destination="@id/userProfileFragment" />
-
+        <action
+            android:id="@+id/action_SecondFragment_to_editProfileFragment"
+            app:destination="@id/editProfileFragment" />
     </fragment>
 
 
@@ -131,15 +133,29 @@
             android:id="@+id/action_editMoodActivityFragment2_to_moodHistoryFragment"
             app:destination="@id/moodHistoryFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/userProfileFragment"
-        android:name="com.example.moodsync.EditProfileFragment"
+        android:name="com.example.moodsync.UserProfileFragment"
         android:label="User Profile"
-        tools:layout="@layout/edit_profile_fragment">
+        tools:layout="@layout/user_profile_fragment">
         <action
             android:id="@+id/action_userProfileFragment_to_SecondFragment"
             app:destination="@id/SecondFragment" />
+        <argument
+            android:name="selectedUserId"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
 
+    <fragment
+        android:id="@+id/editProfileFragment"
+        android:name="com.example.moodsync.EditProfileFragment"
+        android:label="Edit Profile"
+        tools:layout="@layout/edit_profile_fragment">
+        <action
+            android:id="@+id/action_editProfileFragment_to_SecondFragment"
+            app:destination="@id/SecondFragment" />
+    </fragment>
 
 </navigation>
