--- a/code/MoodSync/app/src/main/res/layout/edit_profile_page.xml
+++ b/code/MoodSync/app/src/main/res/layout/edit_profile_page.xml
@@ -7,48 +7,88 @@
     android:fillViewport="true"
     android:background="#203434">
 
+    <TextView
+        android:id="@+id/bioLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="5dp"
+        android:text="Enter New Bio"
+        android:elevation="2dp"
+        android:textColor="#F5F5DC"
+        app:layout_constraintBottom_toTopOf="@+id/bio"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/confirmbutton"
-        android:layout_width="178dp"
+        android:layout_width="wrap_content"
         android:layout_height="57dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginEnd="80dp"
         android:layout_weight="1"
+        android:elevation="2dp"
         android:text="Confirm"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold"
         app:backgroundTint="#9ca49c"
         app:cornerRadius="16dp"
-        app:elevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/backbutton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bio"
+        app:layout_constraintVertical_bias="0.363"
+        app:rippleColor="#FFFFFF" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/backbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="57dp"
+        android:layout_marginEnd="32dp"
+        android:layout_weight="1"
+        android:elevation="2dp"
+        android:text="Back"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:backgroundTint="#9ca49c"
+        app:cornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/confirmbutton"
+        app:layout_constraintHorizontal_bias="0.969"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bio"
+        app:layout_constraintVertical_bias="0.363"
         app:rippleColor="#FFFFFF" />
 
     <ImageView
         android:id="@+id/back_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginTop="34dp"
         android:padding="8dp"
-        android:src="@drawable/ic_arrow_black" />
+        android:src="@drawable/ic_arrow_black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:layout_weight="1"
         android:gravity="center"
         android:text="Edit Profile"
         android:textColor="#F5F5DC"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="155dp"
-        tools:layout_editor_absoluteY="13dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
     <ImageView
         android:id="@+id/profile_image_edit"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="17dp"
         android:background="@drawable/circle_background"
         android:clipToOutline="true"
         android:scaleType="centerCrop"
@@ -56,13 +96,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
-        android:id="@+id/uname"
+        android:id="@+id/fullName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/edit_text_background"
         android:elevation="2dp"
@@ -74,7 +115,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="226dp" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_image_edit" />
 
     <EditText
         android:id="@+id/bio"
@@ -93,12 +134,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/uname" />
+        app:layout_constraintTop_toBottomOf="@id/fullName" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="12dp"
         android:baselineAligned="false"
@@ -106,21 +148,19 @@
 
     </LinearLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/backbutton"
-        android:layout_width="178dp"
-        android:layout_height="57dp"
-        android:layout_weight="1"
-        android:text="Back"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:backgroundTint="#9ca49c"
-        app:cornerRadius="16dp"
-        app:elevation="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bio"
-        app:rippleColor="#FFFFFF"
-        tools:layout_editor_absoluteX="31dp" />
+    <TextView
+        android:id="@+id/nameLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="5dp"
+        android:text="Enter New Name"
+        android:elevation="2dp"
+        android:textColor="#F5F5DC"
+        app:layout_constraintBottom_toTopOf="@+id/fullName"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
