--- a/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
+++ b/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
@@ -134,18 +134,28 @@
             app:destination="@id/moodHistoryFragment" />
     </fragment>
 
+
     <fragment
         android:id="@+id/userProfileFragment"
         android:name="com.example.moodsync.UserProfileFragment"
         android:label="User Profile"
         tools:layout="@layout/user_profile_fragment">
-        <action
-            android:id="@+id/action_userProfileFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+
         <argument
             android:name="selectedUserId"
             app:argType="string"
             app:nullable="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/editProfileActivity"
+        android:name="com.example.moodsync.EditProfileActivity"
+        android:label="User Profile"
+        tools:layout="@layout/edit_profile_page">
+        <action
+            android:id="@+id/smn"
+            app:destination="@id/SecondFragment" />
+        <action android:id="@id/goToEditProfileFragment"
+            app:destination="@id/editProfileFragment"/>
     </fragment>
 
     <fragment
@@ -156,6 +166,15 @@
         <action
             android:id="@+id/action_editProfileFragment_to_SecondFragment"
             app:destination="@id/SecondFragment" />
+        <action
+            android:id="@+id/action_editProfileFragment_self"
+            app:destination="@id/editProfileFragment" />
+        <action
+            android:id="@+id/action_editProfileFragment_self2"
+            app:destination="@id/editProfileFragment" />
+        <action
+                android:id="@+id/action_editProfileFragment_to_editProfileActivity"
+            app:destination="@id/editProfileActivity" />
     </fragment>
 
 </navigation>
