--- a/code/MoodSync/app/src/main/res/layout/home_page_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/home_page_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="16dp"
         app:cardCornerRadius="24dp"
         app:cardElevation="4dp"
@@ -21,14 +21,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
+            android:layout_width="360dp"
+            android:layout_height="match_parent"
             android:background="#D7D2CC"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
             android:paddingStart="16dp"
-            android:paddingEnd="8dp"
             android:paddingTop="8dp"
+            android:paddingEnd="8dp"
             android:paddingBottom="8dp">
 
             <ImageView
@@ -47,8 +47,8 @@
                 android:imeOptions="actionSearch"
                 android:inputType="text"
                 android:paddingStart="12dp"
-                android:paddingEnd="12dp"
                 android:paddingTop="8dp"
+                android:paddingEnd="12dp"
                 android:paddingBottom="8dp"
                 android:textColor="#000000"
                 android:textColorHint="#66000000"
@@ -66,9 +66,9 @@
                     android:id="@+id/profile_pic"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:contentDescription="Profile picture"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ic_person_black_24dp"
-                    android:contentDescription="Profile picture" />
+                    android:src="@drawable/ic_person_black_24dp" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -76,8 +76,8 @@
     <!-- RecyclerView for Mood Event Cards -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mood_recycler_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="407dp"
+        android:layout_height="534dp"
         android:clipToPadding="false"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
