--- a/code/MoodSync/app/src/main/res/layout/home_page_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/home_page_fragment.xml
@@ -157,7 +157,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/saved_button"
+                app:layout_constraintEnd_toStartOf="@+id/diary_button"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toEndOf="@+id/map_button"
                 app:layout_constraintTop_toTopOf="parent">
@@ -174,17 +174,17 @@
                     app:tint="#FFFFFF" />
             </FrameLayout>
 
-            <!-- Saved Button -->
+            <!-- Diary Button -->
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/saved_button"
+                android:id="@+id/diary_button"
                 style="?attr/borderlessButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:minHeight="56dp"
-                android:text="Saved"
+                android:text="Diary"
                 android:textColor="#FFFFFF"
                 android:textSize="12sp"
-                app:icon="@drawable/ic_save_black_24dp"
+                app:icon="@drawable/ic_diary_black_24dp"
                 app:iconGravity="top"
                 app:iconPadding="4dp"
                 app:iconSize="24dp"
@@ -213,7 +213,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintStart_toEndOf="@+id/saved_button"
+                app:layout_constraintStart_toEndOf="@+id/diary_button"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
