--- a/code/MoodSync/app/src/main/res/values/colors.xml
+++ b/code/MoodSync/app/src/main/res/values/colors.xml
@@ -19,6 +19,8 @@
         <color name="beige_light">#E8DED1</color>
         <color name="beige_medium">#D1C0A8</color>
         <color name="beige_dark">#C8AD7E</color>
+    <color name="green">#4AA74E</color>
+
 
 
 </resources>
