--- a/code/MoodSync/app/src/main/res/layout/dialog_pending_requests.xml
+++ b/code/MoodSync/app/src/main/res/layout/dialog_pending_requests.xml
@@ -56,7 +56,8 @@
             android:id="@+id/requests_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxHeight="300dp" />
+            android:maxHeight="300dp"
+            android:fadeScrollbars="true"/>
 
         <LinearLayout
             android:layout_width="match_parent"
