fixed user profile and search profile mood display

--- a/code/MoodSync/app/src/main/res/layout/edit_profile_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/edit_profile_fragment.xml
@@ -257,9 +257,9 @@
                     android:id="@+id/tabs"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
+                    android:background="@color/common_google_signin_btn_text_light_disabled"
                     app:tabBackground="@drawable/tab_selector"
-                    app:tabTextColor="#A0F5F5DC"
+                    app:tabTextColor="@color/black"
                     app:tabSelectedTextColor="#203434"
                     app:tabIndicatorHeight="0dp"
                     app:tabRippleColor="@android:color/transparent"
