--- a/code/MoodSync/app/src/main/res/layout/photo_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/photo_item.xml
@@ -19,4 +19,15 @@
         android:layout_height="match_parent"
         android:background="@drawable/image_overlay" />
 
+    <!-- Mood Emoji Placeholder -->
+    <TextView
+        android:id="@+id/moodEmojiTextView"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@drawable/circle_background_2"
+        android:gravity="center"
+        android:text=""
+        android:textSize="32sp"
+        android:layout_gravity="center" />
+
 </androidx.cardview.widget.CardView>
